[build-system]
requires = ["setuptools>=68", "wheel", "grpcio-tools>=1.60", "protobuf>=4.21"]
build-backend = "setuptools.build_meta"

[project]
name = "ark_msgs"
version = "1.0.0"
requires-python = ">=3.9"
description = "Protobuf-based message definitions and Python helpers for the Ark framework."
dependencies = ["protobuf>=4.21", "numpy<2.0", "scipy"]

authors = [
  { name = "Christopher E. Mower" }
]

maintainers = [
  { name = "Christopher E. Mower" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
